trunk/hfst3_proposition/implementations/foma/regex.output
Terminals which are not used

   ENDM
   ENDD


State 7 conflicts: 29 shift/reduce
State 32 conflicts: 4 shift/reduce
State 33 conflicts: 3 shift/reduce
State 36 conflicts: 6 shift/reduce
State 37 conflicts: 24 shift/reduce
State 38 conflicts: 5 shift/reduce
State 41 conflicts: 12 shift/reduce
State 56 conflicts: 5 shift/reduce
State 58 conflicts: 3 shift/reduce
State 90 conflicts: 29 shift/reduce
State 102 conflicts: 5 shift/reduce
State 127 conflicts: 4 shift/reduce
State 128 conflicts: 4 shift/reduce
State 133 conflicts: 24 shift/reduce
State 156 conflicts: 4 shift/reduce
State 159 conflicts: 5 shift/reduce
State 160 conflicts: 4 shift/reduce
State 161 conflicts: 29 shift/reduce
State 162 conflicts: 7 shift/reduce
State 166 conflicts: 24 shift/reduce
State 167 conflicts: 24 shift/reduce
State 168 conflicts: 24 shift/reduce
State 169 conflicts: 22 shift/reduce
State 170 conflicts: 22 shift/reduce
State 171 conflicts: 22 shift/reduce
State 183 conflicts: 4 shift/reduce
State 189 conflicts: 6 shift/reduce
State 192 conflicts: 4 shift/reduce
State 193 conflicts: 4 shift/reduce
State 197 conflicts: 6 shift/reduce
State 199 conflicts: 29 shift/reduce
State 207 conflicts: 6 shift/reduce
State 209 conflicts: 4 shift/reduce
State 210 conflicts: 4 shift/reduce
State 211 conflicts: 4 shift/reduce
State 214 conflicts: 4 shift/reduce
State 217 conflicts: 6 shift/reduce
State 218 conflicts: 4 shift/reduce
State 220 conflicts: 4 shift/reduce
State 221 conflicts: 4 shift/reduce
State 225 conflicts: 4 shift/reduce
State 226 conflicts: 4 shift/reduce
State 227 conflicts: 4 shift/reduce
State 228 conflicts: 4 shift/reduce
State 231 conflicts: 4 shift/reduce
State 232 conflicts: 4 shift/reduce
State 234 conflicts: 4 shift/reduce
State 235 conflicts: 4 shift/reduce


Grammar

    0 $accept: start $end

    1 start: regex
    2      | regex start

    3 regex: network END

    4 network: networkA
    5        | network COMPOSE networkA
    6        | network LENIENT_COMPOSE networkA
    7        | network CROSS_PRODUCT networkA

    8 networkA: n0

    9 n0: network1
   10   | n0 CONTEXT n0
   11   | n0 CONTEXT
   12   | n0 CONTEXT COMMA n0
   13   | CONTEXT
   14   | CONTEXT DOUBLE_COMMA n0
   15   | n0 CONTEXT DOUBLE_COMMA n0
   16   | CONTEXT COMMA n0
   17   | CONTEXT n0
   18   | CONTEXT n0 COMMA n0
   19   | n0 CONTEXT n0 COMMA n0
   20   | n0 CRESTRICT n0
   21   | n0 ARROW n0
   22   | LDOT n0 RDOT ARROW n0
   23   | LDOT RDOT ARROW n0
   24   | LDOT n0 RDOT ARROW n0 COMMA n0
   25   | LDOT RDOT ARROW n0 COMMA n0
   26   | LDOT n0 RDOT ARROW n0 DIRECTION n0
   27   | LDOT RDOT ARROW n0 DIRECTION n0
   28   | n0 ARROW n0 COMMA n0
   29   | n0 ARROW n0 DIRECTION n0
   30   | n0 DOUBLE_COMMA n0
   31   | n0 ARROW TRIPLE_DOT
   32   | n0 ARROW TRIPLE_DOT n0
   33   | n0 ARROW n0 TRIPLE_DOT
   34   | n0 ARROW n0 TRIPLE_DOT n0
   35   | n0 ARROW n0 TRIPLE_DOT n0 COMMA n0
   36   | n0 ARROW n0 TRIPLE_DOT COMMA n0
   37   | n0 ARROW TRIPLE_DOT n0 COMMA n0
   38   | n0 ARROW TRIPLE_DOT COMMA n0
   39   | n0 ARROW n0 TRIPLE_DOT n0 DIRECTION n0
   40   | n0 ARROW TRIPLE_DOT n0 DIRECTION n0
   41   | n0 ARROW n0 TRIPLE_DOT DIRECTION n0
   42   | n0 ARROW TRIPLE_DOT DIRECTION n0

   43 network1: network2
   44         | network1 SHUFFLE network2
   45         | network1 PRECEDES network2
   46         | network1 FOLLOWS network2

   47 network2: network3

   48 network3: network4

   49 network4: network5
   50         | network4 UNION network5
   51         | network4 PRIORITY_UNION_U network5
   52         | network4 PRIORITY_UNION_L network5
   53         | network4 INTERSECT network5
   54         | network4 MINUS network5
   55         | network4 IMPLIES network5

   56 network5: network6
   57         | network5 network6
   58         | VAR IN network5
   59         | VAR EQUALS VAR
   60         | VAR NEQ VAR
   61         | VAR PRECEDES VAR
   62         | VAR FOLLOWS VAR

   63 network6: network7
   64         | network6 IGNORE_ALL network7
   65         | network6 IGNORE_INTERNAL network7
   66         | network6 RIGHT_QUOTIENT network7
   67         | network6 LEFT_QUOTIENT network7
   68         | network6 INTERLEAVE_QUOTIENT network7

   69 network7: network8
   70         | COMPLEMENT network7
   71         | CONTAINS network7
   72         | CONTAINS_ONE network7
   73         | CONTAINS_OPT_ONE network7

   74 network8: network9

   75 network9: network10
   76         | network9 KLEENE_STAR
   77         | network9 KLEENE_PLUS
   78         | network9 REVERSE
   79         | network9 INVERSE
   80         | network9 XUPPER
   81         | network9 XLOWER
   82         | network9 FLAG_ELIMINATE
   83         | network9 HIGH_CROSS_PRODUCT network10
   84         | network9 NCONCAT
   85         | network9 MORENCONCAT
   86         | network9 LESSNCONCAT
   87         | network9 MNCONCAT

   88 network10: network11
   89          | TERM_NEGATION network10

   90 network11: NET
   91          | network12
   92          | UQUANT LPAREN network RPAREN
   93          | EQUANT network
   94          | LPAREN network RPAREN
   95          | LBRACKET network RBRACKET
   96          | SUCCESSOR_OF VAR COMMA VAR RPAREN
   97          | SUCCESSOR_OF VAR COMMA network RPAREN
   98          | SUCCESSOR_OF network COMMA VAR RPAREN
   99          | sub1 sub2

  100 sub1: SUBSTITUTE LBRACKET network COMMA

  101 sub2: SUBVAL COMMA SUBVAL RBRACKET

  102 network12: fend
  103          | ISIDENTITY network RPAREN
  104          | ISFUNCTIONAL network RPAREN
  105          | ISUNAMBIGUOUS network RPAREN
  106          | NOTID network RPAREN
  107          | LOWERUNIQ network RPAREN
  108          | LOWERUNIQEPS network RPAREN
  109          | ALLFINAL network RPAREN
  110          | UNAMBIGUOUSPART network RPAREN
  111          | AMBIGUOUSPART network RPAREN
  112          | AMBIGUOUSDOMAIN network RPAREN
  113          | EQSUBSTRINGS network COMMA network COMMA network RPAREN

  114 fstart: FUNCTION network COMMA
  115       | FUNCTION network

  116 fmid: fstart network COMMA
  117     | fmid network COMMA

  118 fend: fmid network RPAREN
  119     | fstart network RPAREN
  120     | fstart RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
NET (258) 90
END (259) 3
LBRACKET (260) 95 100
RBRACKET (261) 95 101
LPAREN (262) 92 94
RPAREN (263) 92 94 96 97 98 103 104 105 106 107 108 109 110 111 112
    113 118 119 120
ENDM (264)
ENDD (265)
CRESTRICT (266) 20
CONTAINS (267) 71
CONTAINS_OPT_ONE (268) 73
CONTAINS_ONE (269) 72
XUPPER (270) 80
XLOWER (271) 81
FLAG_ELIMINATE (272) 82
IGNORE_ALL (273) 64
IGNORE_INTERNAL (274) 65
CONTEXT (275) 10 11 12 13 14 15 16 17 18 19
NCONCAT (276) 84
MNCONCAT (277) 87
MORENCONCAT (278) 85
LESSNCONCAT (279) 86
DOUBLE_COMMA (280) 14 15 30
COMMA (281) 12 16 18 19 24 25 28 35 36 37 38 96 97 98 100 101 113 114
    116 117
SHUFFLE (282) 44
PRECEDES (283) 45 61
FOLLOWS (284) 46 62
RIGHT_QUOTIENT (285) 66
LEFT_QUOTIENT (286) 67
INTERLEAVE_QUOTIENT (287) 68
UQUANT (288) 92
EQUANT (289) 93
VAR (290) 58 59 60 61 62 96 97 98
IN (291) 58
IMPLIES (292) 55
EQUALS (293) 59
NEQ (294) 60
SUBSTITUTE (295) 100
SUCCESSOR_OF (296) 96 97 98
PRIORITY_UNION_U (297) 51
PRIORITY_UNION_L (298) 52
LENIENT_COMPOSE (299) 6
TRIPLE_DOT (300) 31 32 33 34 35 36 37 38 39 40 41 42
LDOT (301) 22 23 24 25 26 27
RDOT (302) 22 23 24 25 26 27
FUNCTION (303) 114 115
SUBVAL (304) 101
ISUNAMBIGUOUS (305) 105
ISIDENTITY (306) 103
ISFUNCTIONAL (307) 104
NOTID (308) 106
LOWERUNIQ (309) 107
LOWERUNIQEPS (310) 108
ALLFINAL (311) 109
UNAMBIGUOUSPART (312) 110
AMBIGUOUSPART (313) 111
AMBIGUOUSDOMAIN (314) 112
EQSUBSTRINGS (315) 113
ARROW (316) 21 22 23 24 25 26 27 28 29 31 32 33 34 35 36 37 38 39 40
    41 42
DIRECTION (317) 26 27 29 39 40 41 42
HIGH_CROSS_PRODUCT (318) 83
CROSS_PRODUCT (319) 7
COMPOSE (320) 5
MINUS (321) 54
INTERSECT (322) 53
UNION (323) 50
COMPLEMENT (324) 70
INVERSE (325) 79
REVERSE (326) 78
KLEENE_PLUS (327) 77
KLEENE_STAR (328) 76
TERM_NEGATION (329) 89


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
start (76)
    on left: 1 2, on right: 0 2
regex (77)
    on left: 3, on right: 1 2
network (78)
    on left: 4 5 6 7, on right: 3 5 6 7 92 93 94 95 97 98 100 103 104
    105 106 107 108 109 110 111 112 113 114 115 116 117 118 119
networkA (79)
    on left: 8, on right: 4 5 6 7
n0 (80)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34 35 36 37 38 39 40 41 42, on right: 8 10 11
    12 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    34 35 36 37 38 39 40 41 42
network1 (81)
    on left: 43 44 45 46, on right: 9 44 45 46
network2 (82)
    on left: 47, on right: 43 44 45 46
network3 (83)
    on left: 48, on right: 47
network4 (84)
    on left: 49 50 51 52 53 54 55, on right: 48 50 51 52 53 54 55
network5 (85)
    on left: 56 57 58 59 60 61 62, on right: 49 50 51 52 53 54 55 57
    58
network6 (86)
    on left: 63 64 65 66 67 68, on right: 56 57 64 65 66 67 68
network7 (87)
    on left: 69 70 71 72 73, on right: 63 64 65 66 67 68 70 71 72 73
network8 (88)
    on left: 74, on right: 69
network9 (89)
    on left: 75 76 77 78 79 80 81 82 83 84 85 86 87,
    on right: 74 76 77 78 79 80 81 82 83 84 85 86 87
network10 (90)
    on left: 88 89, on right: 75 83 89
network11 (91)
    on left: 90 91 92 93 94 95 96 97 98 99, on right: 88
sub1 (92)
    on left: 100, on right: 99
sub2 (93)
    on left: 101, on right: 99
network12 (94)
    on left: 102 103 104 105 106 107 108 109 110 111 112 113,
    on right: 91
fstart (95)
    on left: 114 115, on right: 116 119 120
fmid (96)
    on left: 116 117, on right: 117 118
fend (97)
    on left: 118 119 120, on right: 102


state 0

    0 $accept: . start $end

    NET               shift, and go to state 1
    LBRACKET          shift, and go to state 2
    LPAREN            shift, and go to state 3
    CONTAINS          shift, and go to state 4
    CONTAINS_OPT_ONE  shift, and go to state 5
    CONTAINS_ONE      shift, and go to state 6
    CONTEXT           shift, and go to state 7
    UQUANT            shift, and go to state 8
    EQUANT            shift, and go to state 9
    VAR               shift, and go to state 10
    SUBSTITUTE        shift, and go to state 11
    SUCCESSOR_OF      shift, and go to state 12
    LDOT              shift, and go to state 13
    FUNCTION          shift, and go to state 14
    ISUNAMBIGUOUS     shift, and go to state 15
    ISIDENTITY        shift, and go to state 16
    ISFUNCTIONAL      shift, and go to state 17
    NOTID             shift, and go to state 18
    LOWERUNIQ         shift, and go to state 19
    LOWERUNIQEPS      shift, and go to state 20
    ALLFINAL          shift, and go to state 21
    UNAMBIGUOUSPART   shift, and go to state 22
    AMBIGUOUSPART     shift, and go to state 23
    AMBIGUOUSDOMAIN   shift, and go to state 24
    EQSUBSTRINGS      shift, and go to state 25
    COMPLEMENT        shift, and go to state 26
    TERM_NEGATION     shift, and go to state 27

    start      go to state 28
    regex      go to state 29
    network    go to state 30
    networkA   go to state 31
    n0         go to state 32
    network1   go to state 33
    network2   go to state 34
    network3   go to state 35
    network4   go to state 36
    network5   go to state 37
    network6   go to state 38
    network7   go to state 39
    network8   go to state 40
    network9   go to state 41
    network10  go to state 42
    network11  go to state 43
    sub1       go to state 44
    network12  go to state 45
    fstart     go to state 46
    fmid       go to state 47
    fend       go to state 48


state 1

   90 network11: NET .

    $default  reduce using rule 90 (network11)


state 2

   95 network11: LBRACKET . network RBRACKET

    NET               shift, and go to state 1
    LBRACKET          shift, and go to state 2
    LPAREN            shift, and go to state 3
    CONTAINS          shift, and go to state 4
    CONTAINS_OPT_ONE  shift, and go to state 5
    CONTAINS_ONE      shift, and go to state 6
    CONTEXT           shift, and go to state 7
    UQUANT            shift, and go to state 8
    EQUANT            shift, and go to state 9
    VAR               shift, and go to state 10
    SUBSTITUTE        shift, and go to state 11
    SUCCESSOR_OF      shift, and go to state 12
    LDOT              shift, and go to state 13
    FUNCTION          shift, and go to state 14
    ISUNAMBIGUOUS     shift, and go to state 15
    ISIDENTITY        shift, and go to state 16
    ISFUNCTIONAL      shift, and go to state 17
    NOTID             shift, and go to state 18
    LOWERUNIQ         shift, and go to state 19
    LOWERUNIQEPS      shift, and go to state 20
    ALLFINAL          shift, and go to state 21
    UNAMBIGUOUSPART   shift, and go to state 22
    AMBIGUOUSPART     shift, and go to state 23
    AMBIGUOUSDOMAIN   shift, and go to state 24
    EQSUBSTRINGS      shift, and go to state 25
    COMPLEMENT        shift, and go to state 26
    TERM_NEGATION     shift, and go to state 27

    network    go to state 49
    networkA   go to state 31
    n0         go to state 32
    network1   go to state 33
    network2   go to state 34
    network3   go to state 35
    network4   go to state 36
    network5   go to state 37
    network6   go to state 38
    network7   go to state 39
    network8   go to state 40
    network9   go to state 41
    network10  go to state 42
    network11  go to state 43
    sub1       go to state 44
    network12  go to state 45
    fstart     go to state 46
    fmid       go to state 47
    fend       go to state 48


state 3

   94 network11: LPAREN . network RPAREN

    NET               shift, and go to state 1
    LBRACKET          shift, and go to state 2
    LPAREN            shift, and go to state 3
    CONTAINS          shift, and go to state 4
    CONTAINS_OPT_ONE  shift, and go to state 5
    CONTAINS_ONE      shift, and go to state 6
    CONTEXT           shift, and go to state 7
    UQUANT            shift, and go to state 8
    EQUANT            shift, and go to state 9
    VAR               shift, and go to state 10
    SUBSTITUTE        shift, and go to state 11
    SUCCESSOR_OF      shift, and go to state 12
    LDOT              shift, and go to state 13
    FUNCTION          shift, and go to state 14
    ISUNAMBIGUOUS     shift, and go to state 15
    ISIDENTITY        shift, and go to state 16
    ISFUNCTIONAL      shift, and go to state 17
    NOTID             shift, and go to state 18
    LOWERUNIQ         shift, and go to state 19
    LOWERUNIQEPS      shift, and go to state 20
    ALLFINAL          shift, and go to state 21
    UNAMBIGUOUSPART   shift, and go to state 22
    AMBIGUOUSPART     shift, and go to state 23
    AMBIGUOUSDOMAIN   shift, and go to state 24
    EQSUBSTRINGS      shift, and go to state 25
    COMPLEMENT        shift, and go to state 26
    TERM_NEGATION     shift, and go to state 27

    network    go to state 50
    networkA   go to state 31
    n0         go to state 32
    network1   go to state 33
    network2   go to state 34
    network3   go to state 35
    network4   go to state 36
    network5   go to state 37
    network6   go to state 38
    network7   go to state 39
    network8   go to state 40
    network9   go to state 41
    network10  go to state 42
    network11  go to state 43
    sub1       go to state 44
    network12  go to state 45
    fstart     go to state 46
    fmid       go to state 47
    fend       go to state 48


state 4

   71 network7: CONTAINS . network7

    NET               shift, and go to state 1
    LBRACKET          shift, and go to state 2
    LPAREN            shift, and go to state 3
    CONTAINS          shift, and go to state 4
    CONTAINS_OPT_ONE  shift, and go to state 5
    CONTAINS_ONE      shift, and go to state 6
    UQUANT            shift, and go to state 8
    EQUANT            shift, and go to state 9
    SUBSTITUTE        shift, and go to state 11
    SUCCESSOR_OF      shift, and go to state 12
    FUNCTION          shift, and go to state 14
    ISUNAMBIGUOUS     shift, and go to state 15
    ISIDENTITY        shift, and go to state 16
    ISFUNCTIONAL      shift, and go to state 17
    NOTID             shift, and go to state 18
    LOWERUNIQ         shift, and go to state 19
    LOWERUNIQEPS      shift, and go to state 20
    ALLFINAL          shift, and go to state 21
    UNAMBIGUOUSPART   shift, and go to state 22
    AMBIGUOUSPART     shift, and go to state 23
    AMBIGUOUSDOMAIN   shift, and go to state 24
    EQSUBSTRINGS      shift, and go to state 25
    COMPLEMENT        shift, and go to state 26
    TERM_NEGATION     shift, and go to state 27

    network7   go to state 51
    network8   go to state 40
    network9   go to state 41
    network10  go to state 42
    network11  go to state 43
    sub1       go to state 44
    network12  go to state 45
    fstart     go to state 46
    fmid       go to state 47
    fend       go to state 48


state 5

   73 network7: CONTAINS_OPT_ONE . network7

    NET               shift, and go to state 1
    LBRACKET          shift, and go to state 2
    LPAREN            shift, and go to state 3
    CONTAINS          shift, and go to state 4
    CONTAINS_OPT_ONE  shift, and go to state 5
    CONTAINS_ONE      shift, and go to state 6
    UQUANT            shift, and go to state 8
    EQUANT            shift, and go to state 9
    SUBSTITUTE        shift, and go to state 11
    SUCCESSOR_OF      shift, and go to state 12
    FUNCTION          shift, and go to state 14
    ISUNAMBIGUOUS     shift, and go to state 15
    ISIDENTITY        shift, and go to state 16
    ISFUNCTIONAL      shift, and go to state 17
    NOTID             shift, and go to state 18
    LOWERUNIQ         shift, and go to state 19
    LOWERUNIQEPS      shift, and go to state 20
    ALLFINAL          shift, and go to state 21
    UNAMBIGUOUSPART   shift, and go to state 22
    AMBIGUOUSPART     shift, and go to state 23
    AMBIGUOUSDOMAIN   shift, and go to state 24
    EQSUBSTRINGS      shift, and go to state 25
    COMPLEMENT        shift, and go to state 26
    TERM_NEGATION     shift, and go to state 27

    network7   go to state 52
    network8   go to state 40
    network9   go to state 41
    network10  go to state 42
    network11  go to state 43
    sub1       go to state 44
    network12  go to state 45
    fstart     go to state 46
    fmid       go to state 47
    fend       go to state 48


state 6

   72 network7: CONTAINS_ONE . network7

    NET               shift, and go to state 1
    LBRACKET          shift, and go to state 2
    LPAREN            shift, and go to state 3
    CONTAINS          shift, and go to state 4
    CONTAINS_OPT_ONE  shift, and go to state 5
    CONTAINS_ONE      shift, and go to state 6
    UQUANT            shift, and go to state 8
    EQUANT            shift, and go to state 9
    SUBSTITUTE        shift, and go to state 11
    SUCCESSOR_OF      shift, and go to state 12
    FUNCTION          shift, and go to state 14
    ISUNAMBIGUOUS     shift, and go to state 15
    ISIDENTITY        shift, and go to state 16
    ISFUNCTIONAL      shift, and go to state 17
    NOTID             shift, and go to state 18
    LOWERUNIQ         shift, and go to state 19
    LOWERUNIQEPS      shift, and go to state 20
    ALLFINAL          shift, and go to state 21
    UNAMBIGUOUSPART   shift, and go to state 22
    AMBIGUOUSPART     shift, and go to state 23
    AMBIGUOUSDOMAIN   shift, and go to state 24
    EQSUBSTRINGS      shift, and go to state 25
    COMPLEMENT        shift, and go to state 26
    TERM_NEGATION     shift, and go to state 27

    network7   go to state 53
    network8   go to state 40
    network9   go to state 41
    network10  go to state 42
    network11  go to state 43
    sub1       go to state 44
    network12  go to state 45
    fstart     go to state 46
    fmid       go to state 47
    fend       go to state 48


state 7

   13 n0: CONTEXT .
   14   | CONTEXT . DOUBLE_COMMA n0
   16   | CONTEXT . COMMA n0
   17   | CONTEXT . n0
   18   | CONTEXT . n0 COMMA n0

    NET               shift, and go to state 1
    LBRACKET          shift, and go to state 2
    LPAREN            shift, and go to state 3
    CONTAINS          shift, and go to state 4
    CONTAINS_OPT_ONE  shift, and go to state 5
    CONTAINS_ONE      shift, and go to state 6
    CONTEXT           shift, and go to state 7
    DOUBLE_COMMA      shift, and go to state 54
    COMMA             shift, and go to state 55
    UQUANT            shift, and go to state 8
    EQUANT            shift, and go to state 9
    VAR               shift, and go to state 10
    SUBSTITUTE        shift, and go to state 11
    SUCCESSOR_OF      shift, and go to state 12
    LDOT              shift, and go to state 13
    FUNCTION          shift, and go to state 14
    ISUNAMBIGUOUS     shift, and go to state 15
    ISIDENTITY        shift, and go to state 16
    ISFUNCTIONAL      shift, and go to state 17
    NOTID             shift, and go to state 18
    LOWERUNIQ         shift, and go to state 19
    LOWERUNIQEPS      shift, and go to state 20
    ALLFINAL          shift, and go to state 21
    UNAMBIGUOUSPART   shift, and go to state 22
    AMBIGUOUSPART     shift, and go to state 23
    AMBIGUOUSDOMAIN   shift, and go to state 24
    EQSUBSTRINGS      shift, and go to state 25
    COMPLEMENT        shift, and go to state 26
    TERM_NEGATION     shift, and go to state 27

    NET               [reduce using rule 13 (n0)]
    LBRACKET          [reduce using rule 13 (n0)]
    LPAREN            [reduce using rule 13 (n0)]
    CONTAINS          [reduce using rule 13 (n0)]
    CONTAINS_OPT_ONE  [reduce using rule 13 (n0)]
    CONTAINS_ONE      [reduce using rule 13 (n0)]
    CONTEXT           [reduce using rule 13 (n0)]
    DOUBLE_COMMA      [reduce using rule 13 (n0)]
    COMMA             [reduce using rule 13 (n0)]
    UQUANT            [reduce using rule 13 (n0)]
    EQUANT            [reduce using rule 13 (n0)]
    VAR               [reduce using rule 13 (n0)]
    SUBSTITUTE        [reduce using rule 13 (n0)]
    SUCCESSOR_OF      [reduce using rule 13 (n0)]
    LDOT              [reduce using rule 13 (n0)]
    FUNCTION          [reduce using rule 13 (n0)]
    ISUNAMBIGUOUS     [reduce using rule 13 (n0)]
    ISIDENTITY        [reduce using rule 13 (n0)]
    ISFUNCTIONAL      [reduce using rule 13 (n0)]
    NOTID             [reduce using rule 13 (n0)]
    LOWERUNIQ         [reduce using rule 13 (n0)]
    LOWERUNIQEPS      [reduce using rule 13 (n0)]
    ALLFINAL          [reduce using rule 13 (n0)]
    UNAMBIGUOUSPART   [reduce using rule 13 (n0)]
    AMBIGUOUSPART     [reduce using rule 13 (n0)]
    AMBIGUOUSDOMAIN   [reduce using rule 13 (n0)]
    EQSUBSTRINGS      [reduce using rule 13 (n0)]
    COMPLEMENT        [reduce using rule 13 (n0)]
    TERM_NEGATION     [reduce using rule 13 (n0)]
    $default          reduce using rule 13 (n0)

    n0         go to state 56
    network1   go to state 33
    network2   go to state 34
    network3   go to state 35
    network4   go to state 36
    network5   go to state 37
    network6   go to state 38
    network7   go to state 39
    network8   go to state 40
    network9   go to state 41
    network10  go to state 42
    network11  go to state 43
    sub1       go to state 44
    network12  go to state 45
    fstart     go to state 46
    fmid       go to state 47
    fend       go to state 48


state 8

   92 network11: UQUANT . LPAREN network RPAREN

    LPAREN  shift, and go to state 57


state 9

   93 network11: EQUANT . network

    NET               shift, and go to state 1
    LBRACKET          shift, and go to state 2
    LPAREN            shift, and go to state 3
    CONTAINS          shift, and go to state 4
    CONTAINS_OPT_ONE  shift, and go to state 5
    CONTAINS_ONE      shift, and go to state 6
    CONTEXT           shift, and go to state 7
    UQUANT            shift, and go to state 8
    EQUANT            shift, and go to state 9
    VAR               shift, and go to state 10
    SUBSTITUTE        shift, and go to state 11
    SUCCESSOR_OF      shift, and go to state 12
    LDOT              shift, and go to state 13
    FUNCTION          shift, and go to state 14
    ISUNAMBIGUOUS     shift, and go to state 15
    ISIDENTITY        shift, and go to state 16
    ISFUNCTIONAL      shift, and go to state 17
    NOTID             shift, and go to state 18
    LOWERUNIQ         shift, and go to state 19
    LOWERUNIQEPS      shift, and go to state 20
    ALLFINAL          shift, and go to state 21
    UNAMBIGUOUSPART   shift, and go to state 22
    AMBIGUOUSPART     shift, and go to state 23
    AMBIGUOUSDOMAIN   shift, and go to state 24
    EQSUBSTRINGS      shift, and go to state 25
    COMPLEMENT        shift, and go to state 26
    TERM_NEGATION     shift, and go to state 27

    network    go to state 58
    networkA   go to state 31
    n0         go to state 32
    network1   go to state 33
    network2   go to state 34
    network3   go to state 35
    network4   go to state 36
    network5   go to state 37
    network6   go to state 38
    network7   go to state 39
    network8   go to state 40
    network9   go to state 41
    network10  go to state 42
    network11  go to state 43
    sub1       go to state 44
    network12  go to state 45
    fstart     go to state 46
    fmid       go to state 47
    fend       go to state 48


state 10

   58 network5: VAR . IN network5
   59         | VAR . EQUALS VAR
   60         | VAR . NEQ VAR
   61         | VAR . PRECEDES VAR
   62         | VAR . FOLLOWS VAR

    PRECEDES  shift, and go to state 59
    FOLLOWS   shift, and go to state 60
    IN        shift, and go to state 61
    EQUALS    shift, and go to state 62
    NEQ       shift, and go to state 63


state 11

  100 sub1: SUBSTITUTE . LBRACKET network COMMA

    LBRACKET  shift, and go to state 64


state 12

   96 network11: SUCCESSOR_OF . VAR COMMA VAR RPAREN
   97          | SUCCESSOR_OF . VAR COMMA network RPAREN
   98          | SUCCESSOR_OF . network COMMA VAR RPAREN

    NET               shift, and go to state 1
    LBRACKET          shift, and go to state 2
    LPAREN            shift, and go to state 3
    CONTAINS          shift, and go to state 4
    CONTAINS_OPT_ONE  shift, and go to state 5
    CONTAINS_ONE      shift, and go to state 6
    CONTEXT           shift, and go to state 7
    UQUANT            shift, and go to state 8
    EQUANT            shift, and go to state 9
    VAR               shift, and go to state 65
    SUBSTITUTE        shift, and go to state 11
    SUCCESSOR_OF      shift, and go to state 12
    LDOT              shift, and go to state 13
    FUNCTION          shift, and go to state 14
    ISUNAMBIGUOUS     shift, and go to state 15
    ISIDENTITY        shift, and go to state 16
    ISFUNCTIONAL      shift, and go to state 17
    NOTID             shift, and go to state 18
    LOWERUNIQ         shift, and go to state 19
    LOWERUNIQEPS      shift, and go to state 20
    ALLFINAL          shift, and go to state 21
    UNAMBIGUOUSPART   shift, and go to state 22
    AMBIGUOUSPART     shift, and go to state 23
    AMBIGUOUSDOMAIN   shift, and go to state 24
    EQSUBSTRINGS      shift, and go to state 25
    COMPLEMENT        shift, and go to state 26
    TERM_NEGATION     shift, and go to state 27

    network    go to state 66
    networkA   go to state 31
    n0         go to state 32
    network1   go to state 33
    network2   go to state 34
    network3   go to state 35
    network4   go to state 36
    network5   go to state 37
    network6   go to state 38
    network7   go to state 39
    network8   go to state 40
    network9   go to state 41
    network10  go to state 42
    network11  go to state 43
    sub1       go to state 44
    network12  go to state 45
    fstart     go to state 46
    fmid       go to state 47
    fend       go to state 48


state 13

   22 n0: LDOT . n0 RDOT ARROW n0
   23   | LDOT . RDOT ARROW n0
   24   | LDOT . n0 RDOT ARROW n0 COMMA n0
   25   | LDOT . RDOT ARROW n0 COMMA n0
   26   | LDOT . n0 RDOT ARROW n0 DIRECTION n0
   27   | LDOT . RDOT ARROW n0 DIRECTION n0

    NET               shift, and go to state 1
    LBRACKET          shift, and go to state 2
    LPAREN            shift, and go to state 3
    CONTAINS          shift, and go to state 4
    CONTAINS_OPT_ONE  shift, and go to state 5
    CONTAINS_ONE      shift, and go to state 6
    CONTEXT           shift, and go to state 7
    UQUANT            shift, and go to state 8
    EQUANT            shift, and go to state 9
    VAR               shift, and go to state 10
    SUBSTITUTE        shift, and go to state 11
    SUCCESSOR_OF      shift, and go to state 12
    LDOT              shift, and go to state 13
    RDOT              shift, and go to state 67
    FUNCTION          shift, and go to state 14
    ISUNAMBIGUOUS     shift, and go to state 15
    ISIDENTITY        shift, and go to state 16
    ISFUNCTIONAL      shift, and go to state 17
    NOTID             shift, and go to state 18
    LOWERUNIQ         shift, and go to state 19
    LOWERUNIQEPS      shift, and go to state 20
    ALLFINAL          shift, and go to state 21
    UNAMBIGUOUSPART   shift, and go to state 22
    AMBIGUOUSPART     shift, and go to state 23
    AMBIGUOUSDOMAIN   shift, and go to state 24
    EQSUBSTRINGS      shift, and go to state 25
    COMPLEMENT        shift, and go to state 26
    TERM_NEGATION     shift, and go to state 27

    n0         go to state 68
    network1   go to state 33
    network2   go to state 34
    network3   go to state 35
    network4   go to state 36
    network5   go to state 37
    network6   go to state 38
    network7   go to state 39
    network8   go to state 40
    network9   go to state 41
    network10  go to state 42
    network11  go to state 43
    sub1       go to state 44
    network12  go to state 45
    fstart     go to state 46
    fmid       go to state 47
    fend       go to state 48


state 14

  114 fstart: FUNCTION . network COMMA
  115       | FUNCTION . network

    NET               shift, and go to state 1
    LBRACKET          shift, and go to state 2
    LPAREN            shift, and go to state 3
    CONTAINS          shift, and go to state 4
    CONTAINS_OPT_ONE  shift, and go to state 5
    CONTAINS_ONE      shift, and go to state 6
    CONTEXT           shift, and go to state 7
    UQUANT            shift, and go to state 8
    EQUANT            shift, and go to state 9
    VAR               shift, and go to state 10
    SUBSTITUTE        shift, and go to state 11
    SUCCESSOR_OF      shift, and go to state 12
    LDOT              shift, and go to state 13
    FUNCTION          shift, and go to state 14
    ISUNAMBIGUOUS     shift, and go to state 15
    ISIDENTITY        shift, and go to state 16
    ISFUNCTIONAL      shift, and go to state 17
    NOTID             shift, and go to state 18
    LOWERUNIQ         shift, and go to state 19
    LOWERUNIQEPS      shift, and go to state 20
    ALLFINAL          shift, and go to state 21
    UNAMBIGUOUSPART   shift, and go to state 22
    AMBIGUOUSPART     shift, and go to state 23
    AMBIGUOUSDOMAIN   shift, and go to state 24
    EQSUBSTRINGS      shift, and go to state 25
    COMPLEMENT        shift, and go to state 26
    TERM_NEGATION     shift, and go to state 27

    network    go to state 69
    networkA   go to state 31
    n0         go to state 32
    network1   go to state 33
    network2   go to state 34
    network3   go to state 35
    network4   go to state 36
    network5   go to state 37
    network6   go to state 38
    network7   go to state 39
    network8   go to state 40
    network9   go to state 41
    network10  go to state 42
    network11  go to state 43
    sub1       go to state 44
    network12  go to state 45
    fstart     go to state 46
    fmid       go to state 47
    fend       go to state 48


state 15

  105 network12: ISUNAMBIGUOUS . network RPAREN
